# playah

./: README.md  generate-banned-extractors-list.bash  pyproject.toml  run.bash
chat-component/: index.html  package-lock.json  package.json  vite.config.ts  vite.lib.config.ts
chat-component/src/: App.svelte
chat-component/src/lib/: ChatItem.svelte  LiveChat.svelte  main.ts  types.ts
playah/: async_chat_dl.py  async_yt_dlp.py  banned-extractors.txt
playah/app/: __init__.py  __main__.py  chat.py  proxy.py
playah/app/static/js/: JavascriptSubtitlesOctopus.LICENSE  chat-component.js
playah/app/templates/: banned-extractor.html  base.html  error.html  index.html  macros.html  playlist.html  search.html  watch.html
tests/: test_playah.py
